added handlebars for login, signup, home, dashboard and script files for login/logout

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,15 @@
 
 <body>
     <header>
-        
+        <nav>
+          <a href="/">Home</a>
+          <a href="/dashboard">Dashboard</a>
+          {{#if loggedIn}}
+          <button class="no-button" id = 'logout'>logout</button>
+          {{else}}
+          <a href="/login">login</a>
+          {{/if}}
+        </nav>
     </header>
     {{{body}}}
 </body>
