saving userId in session object so other routes can use it to find data

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -13,5 +13,6 @@
         <div class="form-group">
             <button class="btn btn-primary" type="submit">signup</button>
         </div>
+        <a href="/login">Login instead</a>
     </form>
 </div>
