--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,5 +13,6 @@
         <div class="form-group">
             <button class="btn btn-primary" type="submit">login</button>
         </div>
+        <a href="/signup">Sign up instead</a>
     </form>
 </div>
