linked script files correctly

--- a/views/partials/comment.handlebars
+++ b/views/partials/comment.handlebars
@@ -1,4 +1,5 @@
 <section>
     <p>{{content}}</p>
     <p>- {{commentUser.username}} on {{createdAt}}</p>
+    <button>delete comment</button>
 </section>
