--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,18 +10,23 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-          <a href="/">Home</a>
-          <a href="/dashboard">Dashboard</a>
-          {{#if loggedIn}}
-          <button class="no-button" id = 'logout'>logout</button>
-          {{else}}
-          <a href="/login">login</a>
-          {{/if}}
-        </nav>
-    </header>
+  <header>
+    <nav>
+      <a href="/">Home</a>
+      <a href="/dashboard">Dashboard</a>
+      {{#if logged_in}}
+      <button class="no-button" id='logout'>logout</button>
+      {{else}}
+      <a href="/login">login</a>
+      {{/if}}
+    </nav>
+  </header>
+  <main>
     {{{body}}}
+  </main>
+{{#if logged_in}}
+<script src="/js/logout.js"></script>
+{{/if}}
 </body>
 
 </html>
