read only partial for posts

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,6 @@
 <h1>Your Dashboard</h1>
-<section>
-    {{#each posts as |post|}}
-    {{> post-overview}}
-    {{/each}}
-</section>
+{{#each posts as |post|}}
+{{> post-overview}}
+{{/each}}
 <button>add post</button>
+<script
