--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
 <h1>Homepage</h1>
 <section>
     {{#each posts as |post|}}
-    {{> post-overview}}
+    {{> post-read-only}}
     {{/each}}
 </section>
