--- a/views/partials/post-overview.handlebars
+++ b/views/partials/post-overview.handlebars
@@ -1,11 +1,11 @@
 <section>
-    <div class="card">
+    <div class="card" data-id={{id}}>
         <div class="card-header">
-            <h3>{{{title}}}</h3>
-            <p>Posted by {{{user.username}}} on {{{createdAt}}}</p>
+            <h3>{{title}}</h3>
+            <p>Posted by {{user.username}} on {{createdAt}}</p>
         </div>
         <div class="card-body">
-            {{{content}}}
+            {{content}}
         </div>
     </div>
 </section>
