update, delete post buttons, add new post form

--- a/views/partials/post-overview.handlebars
+++ b/views/partials/post-overview.handlebars
@@ -7,5 +7,7 @@
         <div class="card-body">
             {{content}}
         </div>
+        <button>update post</button>
+        <button>delete post</button>
     </div>
 </section>
