--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
 <body>
   <header>
     <nav>
-      <a href="/home">Home</a>
+      <a href="/">Home</a>
       <a href="/dashboard">Dashboard</a>
       {{#if logged_in}}
       <button class="no-button" id='logout'>logout</button>
