--- a/views/partials/post-overview.handlebars
+++ b/views/partials/post-overview.handlebars
@@ -1,13 +1,15 @@
 <section>
     <div class="card" data-id={{id}}>
-        <div class="card-header">
-            <h3>{{title}}</h3>
-            <p>Posted by {{user.username}} on {{createdAt}}</p>
-        </div>
-        <div class="card-body">
-            {{content}}
-        </div>
-        <button>update post</button>
-        <button>delete post</button>
+        <a href="/post/{{id}}">
+            <div class="card-header">
+                <h3>{{title}}</h3>
+                <p>Posted by {{user.username}} on {{createdAt}}</p>
+            </div>
+            <div class="card-body">
+                {{content}}
+            </div>
+        </a>
+        <button id="updatePost">update post</button>
+        <button id="deletePost">delete post</button>
     </div>
 </section>
