script for comment functionality added

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -19,6 +19,8 @@
 {{/if}}
 <section>
     
-    <textarea></textarea>
+    <textarea id="newComment"></textarea>
     <button>New comment</button>
 </section>
+
+<script src="/js/comment.js"></script>
