--- a/views/partials/comment.handlebars
+++ b/views/partials/comment.handlebars
@@ -1,5 +1,7 @@
 <section>
     <p>{{content}}</p>
     <p>- {{commentUser.username}} on {{createdAt}}</p>
+    {{#if deleteBtn}}
     <button>delete comment</button>
+    {{/if}}
 </section>
