delete comment function defined

--- a/views/partials/comment.handlebars
+++ b/views/partials/comment.handlebars
@@ -1,4 +1,4 @@
-<section>
+<section data-id="{{id}}">
     <p>{{content}}</p>
     <p>- {{commentUser.username}} on {{createdAt}}</p>
     {{#if deleteBtn}}
