got username on comments

--- a/views/partials/comment.handlebars
+++ b/views/partials/comment.handlebars
@@ -1,6 +1,6 @@
 <section data-id="{{id}}">
     <p>{{content}}</p>
-    <p>- {{commentUser.username}} on {{createdAt}}</p>
+    <p>- {{user.username}} on {{createdAt}}</p>
     {{#if deleteBtn}}
     <button>delete comment</button>
     {{/if}}
