--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,8 +1,10 @@
 <h1>Your Dashboard</h1>
 
+<section class="justify-content-center">
 {{#each posts as |post|}}
 {{> post-overview}}
 {{/each}}
+</section>
 
 <a href="/postform">add post</a>
 <script src="/js/dashboard.js"></script>
