--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 <h1>Homepage</h1>
-<section>
+<section class="justify-content-center">
     {{#each posts as |post|}}
     {{> post-read-only}}
     {{/each}}
