--- a/views/partials/post-overview.handlebars
+++ b/views/partials/post-overview.handlebars
@@ -1,5 +1,5 @@
 <section>
-    <div class="card" data-id={{id}}>
+    <div class="card col-4 no-padding" data-id={{id}}>
         <a href="/post/{{id}}">
             <div class="card-header">
                 <h3>{{title}}</h3>
