add bootstrap and some css stuff

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 <h1>Homepage</h1>
-<section class="justify-content-center">
+<section >
     {{#each posts as |post|}}
     {{> post-read-only}}
     {{/each}}
