--- a/views/partials/comment.handlebars
+++ b/views/partials/comment.handlebars
@@ -1,4 +1,4 @@
-<section>
+<section class="card no-padding col-4">
     <p>{{content}}</p>
     <p>- {{user.username}} on {{createdAt}}</p>
     {{#if delete}}
