--- a/views/partials/post-read-only.handlebars
+++ b/views/partials/post-read-only.handlebars
@@ -1,6 +1,6 @@
-<section>
-    <a href="/post/{{id}}">
-        <div class="card col-4 p-0 no-padding" data-id={{id}}>
+<section class="justify-content-center">
+    <a class="card col-4 no-padding" href="/post/{{id}}">
+        <div data-id={{id}}>
             <div class="card-header">
                 <h3>{{title}}</h3>
                 <p>Posted by {{user.username}} on {{createdAt}}</p>
