--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,17 @@
 .no-padding {
-    padding: 0;
+    padding: 0 0 10px 0;
+}
+
+.card {
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 10px;
+}
+
+.navbar {
+    justify-content: space-between;
+}
+
+a {
+    text-decoration: none;
 }
