--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,7 +37,7 @@
       </div>
     </nav>
   </header>
-  <main class="justify-content-center text-center">
+  <main class="text-center">
     {{{body}}}
   </main>
   {{#if logged_in}}
