--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <h2>Login</h2>
-<div class="col-md-6">
-    <form class="form login-form">
+<div class="col-6 center">
+    <form class="form login-form ">
         <div class="form-group">
             <label for="username-login">username:</label>
             <input class="form-input" type="text" id="username-login" />
