--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,11 +1,11 @@
 <section>
     <div class="card">
         <div class="card-header">
-            <h3>{{{post.title}}}</h3>
-            <p>Posted by {{{post.user.username}}} on {{{post.createdAt}}}</p>
+            <h3>{{post.title}}</h3>
+            <p>Posted by {{post.user.username}} on {{format_time post.createdAt}}</p>
         </div>
         <div class="card-body">
-            {{{post.content}}}
+            {{post.content}}
         </div>
     </div>
 </section>
