--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
 <h2>Signup</h2>
-<div class="col-md-6">
+<div class="col-6 center">
     <form class="form signup-form">
         <div class="form-group">
             <label for="username-signup">username:</label>
