--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,3 +20,29 @@ a {
     margin-left: auto;
     margin-right: auto;
 }
+
+.text-color {
+    color: black;
+}
+
+input {
+    width: 30em;
+}
+
+.updatePost {
+    width: 10em;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.deletePost {
+    width: 10em;
+}
+
+.comments {
+    width: 10em;
+}
+
+textarea {
+    width: 30em;
+}
