logout button style changes and authorization for postform route

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,3 +46,13 @@ input {
 textarea {
     width: 30em;
 }
+
+button {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.no-button {
+    background: transparent;
+    border: none !important;
+}
