--- a/views/partials/post-overview.handlebars
+++ b/views/partials/post-overview.handlebars
@@ -9,11 +9,14 @@
                 <p>{{content}}</p>
             </div>
         </a>
-        <label for="post-title">Post Title:</label>
-        <input type="text" id="postTitle">
-        <label for="post-content">Post Content:</label>
-        <textarea id="postContent"></textarea>
-        <button class="updatePost">update post</button>
-        <button class="deletePost">delete post</button>
+        <div class="card justify-content-center">
+            <label for="post-title">Post Title:</label>
+            <input type="text" id="postTitle">
+            <label for="post-content">Post Content:</label>
+            <textarea id="postContent"></textarea>
+            <button class="updatePost">update post</button>
+            <button class="deletePost">delete post</button>
+        </div>
+
     </div>
 </section>
