--- a/views/partials/post-overview.handlebars
+++ b/views/partials/post-overview.handlebars
@@ -1,5 +1,5 @@
 <section>
-    <div class="card col-6 no-padding" data-id={{id}}>
+    <div class="card col-6 no-padding" >
         <a href="/post/{{id}}" class="text-decoration-none">
             <div class="card-header">
                 <h3>{{title}}</h3>
@@ -9,7 +9,7 @@
                 <p>{{content}}</p>
             </div>
         </a>
-        <div class="card justify-content-center">
+        <div class="card justify-content-center" data-id={{id}}>
             <label for="post-title">Post Title:</label>
             <input type="text" id="postTitle">
             <label for="post-content">Post Content:</label>
