font size changes and css class changes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,10 +21,6 @@ a {
     margin-right: auto;
 }
 
-.text-color {
-    color: black;
-}
-
 input {
     width: 30em;
 }
@@ -55,4 +51,10 @@ button {
 .no-button {
     background: transparent;
     border: none !important;
+}
+
+.card-body {
+    background-color: cadetblue;
+    color: white;
+    font-size: medium;
 }
