--- a/views/partials/post-overview.handlebars
+++ b/views/partials/post-overview.handlebars
@@ -5,7 +5,7 @@
                 <h3>{{title}}</h3>
                 <p>Posted by {{user.username}} on {{format_time createdAt}}</p>
             </div>
-            <div class="card-body text-color">
+            <div class="card-body">
                 <p>{{content}}</p>
             </div>
         </a>
